flicker fix

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1042,7 +1042,7 @@ body {
   mix-blend-mode: multiply;
   opacity: .5;
   position: absolute;
-  z-index: 2; }
+  z-index: 0; }
 
 .object-container:hover {
   cursor: pointer; }
