--- a/src/scss/playground/_gpgpObjectBase.scss
+++ b/src/scss/playground/_gpgpObjectBase.scss
@@ -160,7 +160,7 @@ $size-xl: 256;
   mix-blend-mode: multiply;
   opacity: .5;
   position: absolute;
-  z-index: 2;
+  z-index: 0;
 }
 
 
